provável ultima alteração/incrementação
criei um novo exercício, e fiz o update do passado

--- a/EXERCICIOS/ex022/fundo006.html
+++ b/EXERCICIOS/ex022/fundo006.html
@@ -3,21 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
 </head>
     <style>
         body{
             height: 97vh;
-            background-color: black;
+           /* background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
+            background-attachment: fixed;*/
+
+
+            /*ShortHand - backgroud
+
+                color > image > position > repeat > [size] > attachement 
+
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center top no-repeat  fixed;
+            background-size: cover;
+
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -30,7 +42,13 @@
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis doloribus praesentium molestias perspiciatis nulla ratione aliquam labore consectetur nesciunt rerum quos animi, magni inventore ab nemo quam nobis hic architecto!
         Quas, soluta consectetur? Nulla quidem officia quas expedita libero. Vel architecto cumque laboriosam dolores odio sunt praesentium magni aut maiores quia ex quas quo dolorum a, necessitatibus officiis, adipisci veniam?
-        Ducimus modi distinctio cupiditate autem nemo quos odit veritatis reiciendis, dolorem id iusto, illum quae sunt optio saepe fugiat harum! Quas totam iusto eos ipsam nemo corporis in provident itaque?lo</p>
+        Ducimus modi distinctio cupiditate autem nemo quos odit veritatis reiciendis, dolorem id iusto, illum quae sunt optio saepe fugiat harum! Quas totam iusto eos ipsam nemo corporis in provident itaque?lo Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur iusto soluta dolorum consequatur ducimus. Dignissimos nisi magnam perferendis vitae ratione at nam dolore labore incidunt quaerat rem, eaque commodi aliquid?
+        Iste corrupti ducimus consequuntur nisi modi, pariatur provident eum adipisci, et beatae ipsa itaque aspernatur distinctio maiores! Dignissimos reprehenderit, accusantium vel, fugiat maiores sapiente officiis totam quas eos soluta ut.
+        Porro inventore quasi rem provident a ab nulla voluptate laudantium tempora nihil. Nihil inventore ab vel officia! Quia, magni eligendi nisi quisquam beatae facere neque! Blanditiis, omnis? Deserunt, in distinctio.
+        Voluptatibus, dolore repellat non libero fugiat corporis explicabo facilis ipsum enim rerum iste ullam aut sit odio nesciunt officiis, corrupti obcaecati quisquam. Suscipit repellendus cum, numquam asperiores sit recusandae ipsum!
+        Tempora soluta necessitatibus alias nam, provident veniam, obcaecati quae mollitia saepe facilis nemo quo quam magnam incidunt porro tempore reiciendis voluptas cupiditate error! Facere fugit, voluptates ab a repellat minus.
+        Quia, inventore reiciendis! Aut placeat, deserunt officia veritatis repellendus, debitis, expedita vero nemo asperiores eum atque blanditiis odit. Ratione sunt porro quo facere quibusdam debitis sint amet voluptate earum. Eius!
+        Sapiente ipsam eligendi quos nulla, molestias odit eaque, neque similique nostrum, laborum ab. Ex nihil labore accusantium dolorem commodi, similique facilis voluptas. Nihil vero, omnis quia veritatis dicta itaque necessitatibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eos suscipit fuga architecto doloribus iusto, unde nemo consectetur ipsa in voluptate enim est, voluptates quis magnam error odit blanditiis corrupti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ullam, aliquid facilis consequuntur velit iusto delectus labore laborum eos maiores vero similique quaerat alias, molestias laudantium eveniet voluptatum distinctio repudiandae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam perspiciatis facilis provident impedit pariatur quae modi dolore vero magnam! In officiis nisi beatae harum aperiam incidunt expedita atque cupiditate autem?</p>
     </main>
 </body>
 </html>
