fazendo algumas alterações
fiz umas alterações no site

--- a/DESAFIOS/d012/index.html
+++ b/DESAFIOS/d012/index.html
@@ -13,8 +13,8 @@
     </header>
 
     <main>
-        <section class="cordel espaço-lateral"> 
-            <p>
+        <section class="cordel-universal"> 
+            <p class="verso-universal">
                 Estou ficando cansado<br>
                 Da tal tecnologia <br>
                 Só se fala por e-mail<br>
@@ -24,6 +24,21 @@
                 Vou dizer tudo em poesia.<br>
             </p>
         </section>
+
+        <section class="cordel-universal fundo1">
+            <div class="fundinho">
+                <p class="verso-universal">
+                    Não é mais como era antes<br>
+                    É tudo abreviado<br>
+                    "Você" só tem duas letras<br>
+                    O "O" e o "E" foi riscado<br>
+                    Para declarar o amor<br>
+                    Basta botar uma flor<br>
+                    E um coração desenhado.<br>
+                </p>
+            </div>
+        </section>
+
     </main>
 </body>
 </html>
