Agora sim, a ultima
Linkei meu github

--- a/DESAFIOS/d012/index.html
+++ b/DESAFIOS/d012/index.html
@@ -106,7 +106,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="#" target="_blank">Marcos Henrique</a> para o Exercício</p>
+        <p>Site criado por <a href="https://github.com/0MarcosHenrique" target="_blank">Marcos Henrique</a> para o Exercício</p>
     </footer>
 </body>
 </html>
