--- a/EXERCICIOS/ex023/tabela001.html
+++ b/EXERCICIOS/ex023/tabela001.html
@@ -11,40 +11,40 @@
 
         table{
             width: 500px;
+            height: 500px;
             border-collapse: collapse;
-        }
-
-        tr.cabecalho {
-            background-color: red;
         }
 
         td {
             border: 1px solid black;
             padding: 10px;
+            text-align: center;
+            vertical-align: middle;
         }
 
-        #importante{
-            background-color: aquamarine;
+        .numero{
+            text-align: right;
         }
+
     </style>
 </head>
 <body>
     <h1>Minha primeira tabela</h1>
     <table>
-        <tr class="cabecalho"> <!-- primeira linha-->
+        <tr> <!-- primeira linha-->
             <td>A1</td>
-            <td>B1</td>
+            <td class="numero">B1</td>
             <td>C1</td>
         </tr>
 
         <tr>
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
 
         <tr>
-            <td id="importante">A3</td>
+            <td>A3</td>
             <td>B3</td>
             <td>C3</td>
         </tr>
