--- a/EXERCICIOS/ex023/tabela002.html
+++ b/EXERCICIOS/ex023/tabela002.html
@@ -31,9 +31,14 @@
             color: white;
         }
 
+        tbody  > tr:nth-child(odd) {
+            background-color: lightslategray;
+        }
+
         td.num {
             text-align: right;
         }
+
     </style>
 </head>
 <body>
