--- a/EXERCICIOS/ex023/tabela002.html
+++ b/EXERCICIOS/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         caption {
@@ -29,6 +30,12 @@
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
         }
 
         tbody  > tr:nth-child(odd) {
@@ -206,5 +213,6 @@
             <td class="num"><strong>213.421.037</strong></td>
         </tfoot>
     </table>
+    
 </body>
 </html>
