--- a/EXERCICIOS/ex023/tabela004.html
+++ b/EXERCICIOS/ex023/tabela004.html
@@ -36,13 +36,13 @@
 
             <tbody>
                 <tr>
-                    <th>Grupos</th>
-                    <th>Nomes</th>
-                    <th colspan="3">Filmes</th>
+                    <th scope="col">Grupos</th>
+                    <th scope="col">Nomes</th>
+                    <th colspan="3" scope="colgroup">Filmes</th>
                 </tr>
 
                 <tr>
-                    <th rowspan="3">Mulheres</th>
+                    <th rowspan="3" scope="rowgroup">Mulheres</th>
                     <td>Ana Maria Machado</td>
                     <td>Avengers 3</td>
                     <td>Piratas do caríbe</td>
@@ -64,7 +64,7 @@
                 </tr>
 
                 <tr>
-                    <th rowspan="3">Homens</th>
+                    <th rowspan="3" scope="rowgroup">Homens</th>
                     <td>Marcos Henrique</td>
                     <td>Jurassic Park</td>
                     <td>Jurassic World</td>
