upando o exercío "iframe003"
realizei o exercício e fiz a correção do exercício"iframe002"

--- a/EXERCICIOS/ex024/iframe002.html
+++ b/EXERCICIOS/ex024/iframe002.html
@@ -19,8 +19,10 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel nostrum, incidunt ipsam natus illum, repellat harum reprehenderit labore magnam illo maiores impedit quos. Nam, ab velit. Praesentium libero molestiae qui?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi expedita obcaecati odio consequuntur sapiente assumenda rerum impedit iste numquam earum provident dolor ipsam quam cupiditate, deserunt accusantium ducimus? Soluta, veritatis Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque porro veritatis vel facilis nihil soluta nulla ducimus delectus, fuga sit earum, similique a illo sed, recusandae at laboriosam vero sapiente!</p>
 
-    <iframe src="pag001.html" frameborder="0"
+    <iframe src="paginas-extras/pag001.html" frameborder="0"
     width="500px" height="500px">
+
+        <p>Seu navegador não é capaz de carregar o iframe</p>
 
     </iframe>
 
